tests/NormalTests/paczka1/fuzzy1/87207070.err
Error in line 16: VR7TElYA0U3 A574 19,7
Error in line 6: 8UlDP A529 30,0
Error in line 25: 8UlDP A574 70,8
Error in line 27: gpE A325 4,8
Error in line 31: A574 A574 75,9
Error in line 32: A574 S24 77,0
Error in line 34: QB2jG S24 32,0
